--- a/app/globals.css
+++ b/app/globals.css
@@ -18,15 +18,22 @@
 }
 
 .main {
+  min-width: 100vw;
   width: 100vw;
   min-height: 100vh;
-  position: fixed;
   display: flex;
   justify-content: center;
   padding: 120px 24px 160px 24px;
   background: linear-gradient(76deg, #131B26 15.23%, #333945 100%);
 }
 
+
+.container{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  width: 100%;
+}
 
 
 .section_padding{
