--- a/app/page.css
+++ b/app/page.css
@@ -15,6 +15,10 @@
     gap: 2rem;
 
     max-height: 500px;
+    width: 100%;
+}
+
+.content__news{
 }
 
 .content__stats{
@@ -24,3 +28,8 @@
 
 }
 
+.content__graph{
+    display: flex;
+    flex: 2;
+    width: 100%;
+}
