--- a/components/news/news.css
+++ b/components/news/news.css
@@ -4,14 +4,16 @@
 }
 
 .news{
+    flex: 0.5;
+
     display: flex;
     flex-direction: column;
 
-    width: auto;
-    min-width: 500px;
-
     height: auto;
     gap: 1rem;
+    max-width: 600px;
+    max-height: 500px;
+
 }
 
 
